Fixed margins on mobile layout

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,7 +9,7 @@
   margin-right: 0;
 }
 
-#content {
+#pagetitle, #toc, #content {
   margin-left: 0.5em;
   margin-right: 0.5em;
 }
